add current-prices endpoint
